      libmono-0.95
    + created new dh_makenetlibs and dh_netdeps tools to manage assembly
      dependencies in the Perl/Python way
    + Moved Pablo's dh_installxsp script to mono-utils to mono-utils
    + mono-common.preinst now moves /usr/lib/mono directory (if exists) to
      /usr/share/dotnet
    + moved the check for mono-vs.-mint priority to debian/rules
  * Mirco 'meebey' Bauer
    + New upstream release updates
    + enabled preview features (.NET 1.2, generics)
  * Michael Schiansky
    + Since beta1 (0.91) dllmaps are handled cleanly (Closes: #241686)
  * Pablo Fischer
    + Added autoscript support to dh_installxsp	

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Wed, 16 Jun 2004 14:40:27 +0200

mono (0.91-1) unstable; urgency=low

  * New upstream release (Closes: Bug#249419)
  * JIT is more stable now (Closes: Bug#238420)
  * FTBFS fixes for sparc in rules/control
  * added s390 architecture to mono-jit, libmono0 and libmono-dev
  * documented supported architectures in README.Debian

 -- Mirco 'meebey' Bauer <mail@meebey.net>  Sun, 02 May 2004 19:19:22 +0200

mono (0.31-2) unstable; urgency=low

  * kernel detection overridden to build 2.4 compatible version 
    (closes: #243928, #243940)
  * DLL map updates (closes: #241686)
  * README.Debian updated with latest MonoConventions

 -- Eduard Bloch <blade@debian.org>  Wed,  7 Apr 2004 01:39:55 +0200

mono (0.31-1) unstable; urgency=low

  * New upstream release
  * Eduard Bloch
    + added additional entries to the hard-coded DLL map (closes: #236782)
    + included experimental patch for build failures on HPPA (partial fix 
      for #240272)

 -- Eduard Bloch <blade@debian.org>  Tue,  6 Apr 2004 09:44:35 +0200

mono (0.30.2-1) unstable; urgency=low

  * New upstream release
  * Eduard Bloch:
    + debian/control: limited "any" arch lists to those really supported by the
      Mono project. libmono0(-dev) to i386 powerpc (closes: #235315)